Final Final Commit

--- a/web/turntable.html
+++ b/web/turntable.html
@@ -68,29 +68,43 @@
           <img src="img/reset.png" alt="R" />
         </button>
         <button class="button" id="btn_front_view" title="Left">
-          <img src="img/left_view.png" alt="F" />
+          <img src="img/left_view.png" alt="L" />
         </button>
         <button class="button" id="btn_top_view" title="Top">
           <img src="img/top_view.png" alt="T" />
         </button>
         <button class="button" id="btn_left_view" title="Rear">
-          <img src="img/right_view.png" alt="E" />
+          <img src="img/right_view.png" alt="R" />
         </button>
         <button class="button" id="btn_right_view" title="Front">
-          <img src="img/front-view.png" alt="D" />
+          <img src="img/front-view.png" alt="F" />
         </button>
         <div class="divider"></div>
         <button class="button" id="btn_light_on" title="Light On">
-          <img src="img/light-on.png" alt="L" />
+          <img src="img/light-on.png" alt="HI" />
         </button>
         <button class="button" id="btn_light_off" title="Light Off">
-          <img src="img/light-off.png" alt="L" />
+          <img src="img/light-off.png" alt="LO" />
         </button>
         <button class="button" id="btn_texture_1" title="Plastic">
           <img src="img/texture-1.png" alt="T1" />
         </button>
         <button class="button" id="btn_texture_2" title="Carbon">
           <img src="img/texture-2.png" alt="T2" />
+        </button>
+
+        <div class="divider">
+        </div> 
+        <button class="button" id="btn_lid" title="Open/Close Lid">
+          <img src="img/lid.png" alt="Lid" />
+        </button>
+
+        <button class="button" id="btn_needle" title="Pick Needle">
+          <img src="img/play.png" alt="Play" />
+        </button>
+
+        <button class="button" id="btn_power" title="On/Off">
+          <img src="img/turn_on.png" alt="TurnOn" />
         </button>
       </div>
     </div>
@@ -150,6 +164,28 @@
     </div>
   </div>
 
+  <div class="features-bar">
+    <div class="feature-item">
+      <svg class="feat-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg>
+      <span>ENTREGA</span>
+    </div>
+
+    <div class="feature-item">
+      <svg class="feat-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="23 4 23 10 17 10"></polyline><polyline points="1 20 1 14 7 14"></polyline><path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path></svg>
+      <span>TROCAS & DEVOLUÇÕES</span>
+    </div>
+
+    <div class="feature-item">
+      <svg class="feat-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg>
+      <span>PAGAMENTO SEGURO</span>
+    </div>
+
+    <div class="feature-item">
+      <svg class="feat-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 18v-6a9 9 0 0 1 18 0v6"></path><path d="M21 19a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3zM3 19a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2H3z"></path></svg>
+      <span>APOIO AO CLIENTE</span>
+    </div>
+  </div>
+  
   <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
